// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";



message ProposeAddRoleMember {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ProposeRemoveRoleMember {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ProposeAddRoleOwner {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ProposeRemoveRoleOwner {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ProposeAddRoleAdmin {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ProposeRemoveRoleAdmin {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ProposeAddRoleTask {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ProposeRemoveRoleTask {

    string role_id = 1;

    string user_id = 2;

    string reason = 3;

    string metadata = 4;

}


message ConfirmAddRoleMember {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message ConfirmRemoveRoleMember {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message ConfirmAddRoleOwner {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message ConfirmRemoveRoleOwner {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message ConfirmAddRoleAdmin {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message ConfirmRemoveRoleAdmin {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message RejectAddRoleMember {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message RejectRemoveRoleMember {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message RejectAddRoleOwner {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message RejectRemoveRoleOwner {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message RejectAddRoleAdmin {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message RejectRemoveRoleAdmin {

    string proposal_id = 1;

    string justification = 2;

    string metadata = 3;

}


message CreateRole {

    string name = 1;

    repeated string admins = 2;

    string metadata = 3;

}
